# advent-of-code

./: Cargo.toml  rustfmt.toml
inputs/2016/: 01.txt  16.txt  20.txt  23.txt  24.txt
inputs/2018/: 04.txt  05.txt  22.txt  23.txt
inputs/2019/: 01.txt  02.txt  04.txt  09.txt  12.txt  13.txt  14.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  24.txt  25.txt
inputs/2020/: 03.txt  18.txt  22.txt
src/: input.rs  lib.rs  main.rs
src/solutions/: bench.rs  mod.rs
src/solutions/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  mod.rs
src/solutions/year2016/: assembunny.rs  day01.rs  day02.rs  day03.rs  day05.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  mod.rs
src/solutions/year2018/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day22.rs  day23.rs  mod.rs
src/solutions/year2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day25.rs  mod.rs
src/solutions/year2019_optimized/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  (+13 more)
src/utils/: cache.rs  digits.rs  fast_intcode.rs  grid.rs  intcode.rs  mask.rs  mod.rs  pos.rs  search.rs  useful_parsers.rs
(+12 files in other folders)
