[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Tim Vermeulen <tvermeulen@me.com>"]
edition = "2018"

[dependencies]
surf = "1.0.3"
async-std = { version = "1.2.0", features = ["attributes"] }
parser = { git = "https://github.com/timvermeulen/parser" }
futures = "0.3.1"
rust-crypto = "0.2.36"
permutohedron = "0.2.4"
itertools = "0.8.2"