[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Tim Vermeulen <tvermeulen@me.com>"]
edition = "2018"

[dependencies]
surf = "1.0.3"
async-std = { version = "1.2.0", features = ["attributes"] }
parser = { git = "https://github.com/timvermeulen/parser" }
futures = "0.3.1"
rust-crypto = "0.2.36"
permutohedron = "0.2.4"
itertools = "0.8.2"
pathfinding = "2.0.0"
num = "0.2.0"
noisy_float = "0.1.11"
rayon = "1.2.1"
modinverse = "0.1.1"
mod_exp = "1.0.1"
rand = "0.7.2"
once_cell = "1.2.0"
iterslide = "1.0.1"
fxhash = "0.2"